triumph gui, rp guis, refactoring